# mirrors

./: CMakeLists.txt  README.md  mirrors.sh  term4  term4.cpp
src/: capture.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  wm.cpp
src/wayland/: capture.cpp  capture.h  input.cpp  input.h
src/x11/: capture.cpp  input.cpp  input.h  wm.cpp
